# nozip

./: CMakeLists.txt  LICENSE  README.md
src/: nozip.c  nozip.h  stb_inflate.h  unzip.c
